revised tw name nb

--- a/demo_tw_name.ipynb
+++ b/demo_tw_name.ipynb
@@ -30,19 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/fiona/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.layers.convolutional import Conv2D,MaxPooling2D,ZeroPadding2D\n",
     "from keras.layers.normalization import BatchNormalization\n",
@@ -75,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +160,7 @@
        "9          丁一琦"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +574,7 @@
        "[6063 rows x 1 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +691,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_image = generate_image_sample(256,'./tw_train/train_','./tw_train/train_label.csv','./tw_validate/valid_','./tw_validate/valid_label.csv')"
+    "sample_image = generate_image_sample(5120,'./tw_train/train_','./tw_train/train_label.csv','./tw_validate/valid_','./tw_validate/valid_label.csv')"
    ]
   },
   {
@@ -1353,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1363,8 +1353,20 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "172/192 [=========================>....] - ETA: 104s - loss: 1.6158 - acc: 0.7033"
+      "192/192 [==============================] - 1098s - loss: 1.4492 - acc: 0.7342 - val_loss: 34.9755 - val_acc: 0.0000e+00\n",
+      "Epoch 2/2\n",
+      "192/192 [==============================] - 1045s - loss: 0.0044 - acc: 1.0000 - val_loss: 24.1277 - val_acc: 0.0312\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb61e8ef780>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1372,19 +1374,19 @@
     "                    steps_per_epoch=int(len(sample_image)*0.75), \\\n",
     "                    validation_data =generate_image_from_file('./tw_validate/valid_label.csv',batch_size=batch_size,maxlabellength=max_label_length,train=False) ,\\\n",
     "                    validation_steps = int(len(sample_image)*0.25),\\\n",
-    "                    epochs=2,\\\n",
+    "                    epochs=10,\\\n",
     "                    verbose=1,\\\n",
     "                    callbacks =[earlystop])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights('crnn_tw_model_weights.h5')\n",
-    "model.to_json('model_structure.json')"
+    "model.save_weights('./crnn/crnn_tw_model_weights_5120.h5')\n",
+    "model_file=model.to_json()"
    ]
   },
   {
