--- a/demo_tw_name.ipynb
+++ b/demo_tw_name.ipynb
@@ -30,9 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fiona/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.layers.convolutional import Conv2D,MaxPooling2D,ZeroPadding2D\n",
     "from keras.layers.normalization import BatchNormalization\n",
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +170,7 @@
        "9          丁一琦"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +584,7 @@
        "[6063 rows x 1 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +763,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "409\n"
+      "1520\n"
      ]
     },
     {
@@ -790,188 +800,124 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>立</th>\n",
+       "      <th>羿</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>綺</th>\n",
+       "      <th>翡</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>綸</th>\n",
+       "      <th>翠</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>維</th>\n",
+       "      <th>翟</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>綠</th>\n",
+       "      <th>翕</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>紀</th>\n",
+       "      <th>翔</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>簡</th>\n",
+       "      <th>翎</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>筱</th>\n",
+       "      <th>翌</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>筠</th>\n",
+       "      <th>翊</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>笙</th>\n",
+       "      <th>翁</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>竺</th>\n",
+       "      <th>羽</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>秦</th>\n",
+       "      <th>翰</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>緯</th>\n",
+       "      <th>義</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>秋</th>\n",
+       "      <th>群</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>秀</th>\n",
+       "      <th>羚</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>禹</th>\n",
+       "      <th>美</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>福</th>\n",
+       "      <th>羅</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>禎</th>\n",
+       "      <th>纓</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>祥</th>\n",
+       "      <th>續</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>碩</th>\n",
+       "      <th>繼</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>碧</th>\n",
+       "      <th>繹</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>研</th>\n",
+       "      <th>翬</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>石</th>\n",
+       "      <th>翼</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>綿</th>\n",
+       "      <th>繕</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>練</th>\n",
+       "      <th>聲</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>洪</th>\n",
+       "      <th>臣</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>致</th>\n",
+       "      <th>脩</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>范</th>\n",
+       "      <th>能</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>苹</th>\n",
+       "      <th>胤</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>嵐</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>崇</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>峰</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>岳</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>志</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>忞</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>忠</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>念</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>旭</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>施</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>方</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>斌</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>文</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>敦</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>敏</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>政</th>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>擇</th>\n",
@@ -982,124 +928,188 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>捷</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>挺</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>挹</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>振</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>戴</th>\n",
+       "      <th>旂</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>成</th>\n",
+       "      <th>旅</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>懿</th>\n",
+       "      <th>旆</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>懷</th>\n",
+       "      <th>旗</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>慶</th>\n",
+       "      <th>昭</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>慧</th>\n",
+       "      <th>春</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>慈</th>\n",
+       "      <th>映</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>惠</th>\n",
+       "      <th>星</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>怡</th>\n",
+       "      <th>昕</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>思</th>\n",
+       "      <th>易</th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th></th>\n",
+       "      <th>明</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>昌</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>昊</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>昇</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>昆</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>昂</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>昀</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>旼</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>旻</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>旺</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>旭</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>早</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>日</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>409 rows × 1 columns</p>\n",
+       "<p>1520 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "      count\n",
        "char       \n",
        "          1\n",
-       "立         1\n",
-       "綺         1\n",
-       "綸         1\n",
-       "維         1\n",
-       "綠         1\n",
-       "紀         1\n",
-       "簡         1\n",
-       "筱         1\n",
-       "筠         1\n",
-       "笙         1\n",
-       "竺         1\n",
-       "秦         1\n",
-       "緯         1\n",
-       "秋         1\n",
-       "秀         1\n",
-       "禹         1\n",
-       "福         1\n",
-       "禎         1\n",
-       "祥         1\n",
-       "碩         1\n",
-       "碧         1\n",
-       "研         1\n",
-       "石         1\n",
-       "綿         1\n",
-       "練         1\n",
-       "洪         1\n",
-       "致         1\n",
-       "范         1\n",
-       "苹         1\n",
+       "羿         1\n",
+       "翡         1\n",
+       "翠         1\n",
+       "翟         1\n",
+       "翕         1\n",
+       "翔         1\n",
+       "翎         1\n",
+       "翌         1\n",
+       "翊         1\n",
+       "翁         1\n",
+       "羽         1\n",
+       "翰         1\n",
+       "義         1\n",
+       "群         1\n",
+       "羚         1\n",
+       "美         1\n",
+       "羅         1\n",
+       "纓         1\n",
+       "續         1\n",
+       "繼         1\n",
+       "繹         1\n",
+       "翬         1\n",
+       "翼         1\n",
+       "繕         1\n",
+       "聲         1\n",
+       "臣         1\n",
+       "脩         1\n",
+       "能         1\n",
+       "胤         1\n",
        "...     ...\n",
-       "嵐         1\n",
-       "崇         1\n",
-       "峰         1\n",
-       "岳         1\n",
-       "志         1\n",
-       "忞         1\n",
-       "忠         1\n",
-       "念         1\n",
-       "旭         1\n",
-       "施         1\n",
-       "方         1\n",
-       "斌         1\n",
-       "文         1\n",
-       "敦         1\n",
-       "敏         1\n",
-       "政         1\n",
        "擇         1\n",
        "揚         1\n",
+       "捷         1\n",
+       "挺         1\n",
+       "挹         1\n",
        "振         1\n",
-       "戴         1\n",
-       "成         1\n",
-       "懿         1\n",
-       "懷         1\n",
-       "慶         1\n",
-       "慧         1\n",
-       "慈         1\n",
-       "惠         1\n",
-       "怡         1\n",
-       "思         1\n",
-       "         1\n",
+       "旂         1\n",
+       "旅         1\n",
+       "旆         1\n",
+       "旗         1\n",
+       "昭         1\n",
+       "春         1\n",
+       "映         1\n",
+       "星         1\n",
+       "昕         1\n",
+       "易         1\n",
+       "明         1\n",
+       "昌         1\n",
+       "昊         1\n",
+       "昇         1\n",
+       "昆         1\n",
+       "昂         1\n",
+       "昀         1\n",
+       "旼         1\n",
+       "旻         1\n",
+       "旺         1\n",
+       "旭         1\n",
+       "早         1\n",
+       "日         1\n",
+       "         1\n",
        "\n",
-       "[409 rows x 1 columns]"
+       "[1520 rows x 1 columns]"
       ]
      },
      "execution_count": 13,
@@ -1243,7 +1253,7 @@
       "____________________________________________________________________________________________________\n",
       "blstm2 (Bidirectional)           (None, None, 512)     787968      blstm1_out[0][0]                 \n",
       "____________________________________________________________________________________________________\n",
-      "blstm2_out (Dense)               (None, None, 409)     209817      blstm2[0][0]                     \n",
+      "blstm2_out (Dense)               (None, None, 1520)    779760      blstm2[0][0]                     \n",
       "____________________________________________________________________________________________________\n",
       "the_labels (InputLayer)          (None, 5)             0                                            \n",
       "____________________________________________________________________________________________________\n",
@@ -1256,8 +1266,8 @@
       "                                                                   input_length[0][0]               \n",
       "                                                                   label_length[0][0]               \n",
       "====================================================================================================\n",
-      "Total params: 7,864,217\n",
-      "Trainable params: 7,861,657\n",
+      "Total params: 8,434,160\n",
+      "Trainable params: 8,431,600\n",
       "Non-trainable params: 2,560\n",
       "____________________________________________________________________________________________________\n"
      ]
@@ -1290,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -1352,21 +1362,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/2\n",
-      "192/192 [==============================] - 1098s - loss: 1.4492 - acc: 0.7342 - val_loss: 34.9755 - val_acc: 0.0000e+00\n",
-      "Epoch 2/2\n",
-      "192/192 [==============================] - 1045s - loss: 0.0044 - acc: 1.0000 - val_loss: 24.1277 - val_acc: 0.0312\n"
+      "Epoch 1/10\n",
+      "3494/3840 [==========================>...] - ETA: 2522s - loss: 0.6581 - acc: 0.9443"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7fb61e8ef780>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1381,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
